统一tag解析方案